// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kirbyup build > auto-imports components with glob patterns 1`] = `
"(function(){"use strict";function r(e,n,o,_,s,y,k,F){var t=typeof e=="function"?e.options:e;return n&&(t.render=n,t.staticRenderFns=o,t._compiled=!0),{exports:e,options:t}}const c={};var i=function(){var n=this,o=n._self._c;return o("k-header",[n._v("Bar")])},a=[],l=r(c,i,a);const u=l.exports,d=Object.freeze(Object.defineProperty({__proto__:null,default:u},Symbol.toStringTag,{value:"Module"})),f={};var m=function(){var n=this,o=n._self._c;return o("k-header",[n._v("Foo")])},p=[],v=r(f,m,p);const b=v.exports,g=Object.freeze(Object.defineProperty({__proto__:null,default:b},Symbol.toStringTag,{value:"Module"})),O=Object.freeze({import(e){return Object.entries(e).reduce((o,[_,s])=>(o[j(_)]=s.default,o),{})}});function j(e){return e.substring(e.lastIndexOf("/")+1,e.lastIndexOf(".")).toLowerCase()}window.panel.plugin("kirbyup/example",{blocks:O.import(Object.assign({"./components/blocks/Bar.vue":d,"./components/blocks/Foo.vue":g}))})})();
"
`;

exports[`kirbyup build > builds Kirby Panel plugins 1`] = `
"(function(){"use strict";const e={extends:"k-info-field"};window.panel.plugin("kirbyup/test",{fields:{demo:e}})})();
"
`;

exports[`kirbyup build > builds index.css 1`] = `
"(function(){"use strict"})();
"
`;

exports[`kirbyup build > builds index.css 2`] = `
".foo{content:"bar"}
"
`;

exports[`builds index.js 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`kirbyup build > compiles Vue single-file components 1`] = `
"(function(){"use strict";function o(n,e,_,d,l,u,f,m){var t=typeof n=="function"?n.options:n;return e&&(t.render=e,t.staticRenderFns=_,t._compiled=!0),{exports:n,options:t}}const s={created(){console.log("created")}};var i=function(){var e=this;return e._self._c,e._m(0)},c=[function(){var n=this,e=n._self._c;return e("section",{staticClass:"k-demo-section"},[e("header",{staticClass:"k-section-header"},[e("h2",{staticClass:"k-headline"},[n._v("Custom section")])])])}],a=o(s,i,c);const r=a.exports;window.panel.plugin("kirbyup/test",{sections:{demo:r}})})();
"
`;

exports[`compiles vue templates 1`] = `
"import { createElementBlock as r, openBlock as a, createElementVNode as c } from "vue";
const i = (o, e) => {
  const t = o.__vccOpts || o;
  for (const [n, s] of e)
    t[n] = s;
  return t;
}, d = {
  created() {
    console.log("created");
  }
}, l = { class: "k-demo-section" };
function p(o, e, t, n, s, m) {
  return a(), r("section", l, [...e[0] || (e[0] = [
    c(
      "header",
      { class: "k-section-header" },
      [
        c("h2", { class: "k-headline" }, "Custom section")
      ],
      -1
      /* CACHED */
    )
  ])]);
}
const _ = /* @__PURE__ */ i(d, [["render", p]]);
window.panel.plugin("kirbyup/test", {
  sections: {
    demo: _
  }
});
"
`;

exports[`kirbyup build > builds Kirby Panel plugins 1`] = `
"const e = { extends: "k-info-field" };
window.panel.plugin("kirbyup/test", {
  fields: {
    demo: e
  }
});
"
`;

exports[`kirbyup build > builds index.css 1`] = `
"
"
`;

exports[`kirbyup build > builds index.css 2`] = `
".foo{content:"bar"}
"
`;

exports[`kirbyup build > builds index.js 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`kirbyup build > compiles Vue single-file components 1`] = `
"import { createElementBlock as r, openBlock as a, createElementVNode as c } from "vue";
const i = (o, e) => {
  const t = o.__vccOpts || o;
  for (const [n, s] of e)
    t[n] = s;
  return t;
}, d = {
  created() {
    console.log("created");
  }
}, l = { class: "k-demo-section" };
function p(o, e, t, n, s, m) {
  return a(), r("section", l, [...e[0] || (e[0] = [
    c(
      "header",
      { class: "k-section-header" },
      [
        c("h2", { class: "k-headline" }, "Custom section")
      ],
      -1
      /* CACHED */
    )
  ])]);
}
const _ = /* @__PURE__ */ i(d, [["render", p]]);
window.panel.plugin("kirbyup/test", {
  sections: {
    demo: _
  }
});
"
`;

exports[`kirbyup build > injects built-in environment variables 1`] = `
"const o = "production";
export {
  o as mode
};
"
`;

exports[`kirbyup build > injects custom environment variables 1`] = `
"const o = "bar";
export {
  o as foo
};
"
`;

exports[`kirbyup build > loads config file with function export 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`kirbyup build > loads config file with object export 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`kirbyup build > resolves path aliases 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;
<<<<<<< HEAD

exports[`supports built-in env variables 1`] = `
"const o = "production";
export {
  o as mode
};
"
`;

<<<<<<< HEAD
exports[`kirbyup build > injects custom environment variables 1`] = `
=======
exports[`supports custom env variables 1`] = `
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> 2040149 (feat!: migrate to Vue 3 & remove deprecated options)
=======
<<<<<<< HEAD
>>>>>>> c3f8661 (chore: upgrade dependencies)
=======
<<<<<<< HEAD
>>>>>>> c17bd66 (chore: upgrade Vue 3 support)
"var kirbyupExport=(function(o){"use strict";return o.foo="bar",Object.defineProperty(o,Symbol.toStringTag,{value:"Module"}),o})({});
=======
=======
>>>>>>> 0399ff7 (chore: upgrade dependencies)
<<<<<<< HEAD
"var kirbyupExport=function(o){"use strict";const r="bar";return o.foo=r,Object.defineProperty(o,Symbol.toStringTag,{value:"Module"}),o}({});
=======
<<<<<<< HEAD
"var kirbyupExport=function(e){"use strict";var t={BASE_URL:"/",DEV:!1,MODE:"production",PROD:!0,SSR:!1};const o=t.KIRBYUP_FOO;return e.foo=o,Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),e}({});
=======
"var e = { BASE_URL: "/", MODE: "production", DEV: !1, PROD: !0, SSR: !1 };
=======
"var e = { BASE_URL: "/", DEV: !1, MODE: "production", PROD: !0, SSR: !1 };
>>>>>>> 8c8a728 (chore: upgrade dependencies)
const o = e.KIRBYUP_FOO;
export {
  o as foo
};
<<<<<<< HEAD
>>>>>>> 682d144 (feat!: migrate to Vue 3 & remove deprecated options)
>>>>>>> 4af590d (feat!: migrate to Vue 3 & remove deprecated options)
<<<<<<< HEAD
>>>>>>> 5ad04b6 (feat!: migrate to Vue 3 & remove deprecated options)
=======
=======
>>>>>>> 8c8a728 (chore: upgrade dependencies)
>>>>>>> 0399ff7 (chore: upgrade dependencies)
=======
=======
>>>>>>> 3876823 (chore: rebase on `main`)
"const o = "bar";
export {
  o as foo
};
"
`;

<<<<<<< HEAD
exports[`kirbyup build > loads config file with function export 1`] = `
=======
exports[`supports kirbyup.config.js with function 1`] = `
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> 2040149 (feat!: migrate to Vue 3 & remove deprecated options)
"var test=(function(){"use strict";return"bar"})();
=======
=======
>>>>>>> 3876823 (chore: rebase on `main`)
"const o = "bar";
export {
  o as default
};
"
`;

<<<<<<< HEAD
exports[`kirbyup build > loads config file with object export 1`] = `
=======
exports[`supports kirbyup.config.js with object 1`] = `
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> 2040149 (feat!: migrate to Vue 3 & remove deprecated options)
"var test=(function(){"use strict";return"bar"})();
"
`;

exports[`kirbyup build > resolves path aliases 1`] = `
"var kirbyupExport=(function(){"use strict";return"bar"})();
=======
=======
>>>>>>> 3876823 (chore: rebase on `main`)
"const o = "bar";
export {
  o as default
};
"
`;

exports[`supports resolve aliases 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;
=======
>>>>>>> 12660cc (test: update snapshots)
